--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+main {
+  background: url('./hero-bg.jpg');
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+main .container {
+  padding-bottom: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+@media only screen and (min-width:1000px) {
+  
+  main .container{
+    max-width: 1100px;
+    margin: 0 auto;
+    padding-bottom: 5rem;
+    
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .cardContainer {
+    display: flex;
   }
-  to {
-    transform: rotate(360deg);
+
+  main section {
+    padding: 5rem 0;
   }
+
 }
